Code Cleanup (#5778)